7902176: Suspicious reference comparison in TestTreePanel